Modify server url

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#39b54a",
-    "navigationBarTitleText": "Fish V",
+    "navigationBarTitleText": "Aquaponics IOT",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
